# jea-portfolio

./: .cursorignore  .gitignore  GEMINI.md  README.md  mcp_test.py
ats/: .flaskenv  KeywordExtractor.py  README.md  ResumeScorer.py  analysis.md  app.py  debugging.txt  documentation.txt  requirements.txt
auth/: README.md  package.json
colorization/: generate_apron_variations.py  main.py  main2.py  main3.py  main6.py  main7.py  main_4.ipynb
dataviz/: Dockerfile  README.md
dicom-anonymizer/: README.md  anonymize_dicom.py  dicom_anonymizer.py  setup.py
running-metrics/: README.md  compose.yaml  pyproject.toml
running-metrics/api-gateway/app/: app.py
running-metrics/interfaces/: pose_detector.py
running-metrics/metrics-calculator/app/: app.py
running-metrics/metrics-calculator/app/calculators/: base_calculator.py  cadence_calculator.py  center_of_gravity_calculator.py  joint_angle_calculator.py  lean_angle_calculator.py  speed_calculator.py  stride_calculator.py  symmetry_calculator.py  timing_calculator.py  vertical_oscillation_calculator.py
running-metrics/metrics-calculator/app/services/: metrics_pipeline.py  metrics_service.py
running-metrics/models/: domain.py  events.py
running-metrics/shared/database/: config.py  connection.py  models.py  repository.py
running-metrics/shared/events/: event_bus.py
running-metrics/shared/models/: domain.py  events.py
running-metrics/shared/utils/: constants.py
running-metrics/video-processor/app/: app.py
running-metrics/video-processor/app/services/: pose_detector.py  video_processor.py  video_service.py
(+248 files in other folders)
